--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--====== Title ======-->
     <title>FinEvals.ai - Regulatory-Grade AI Evaluations</title>
 
-    <meta name="description" content="Enabling banks to prove—rather than assume—that their AI systems are safe, compliant, and auditable." />
+    <meta name="description" content="Enabling Financial Services Companies to prove—rather than assume—that their AI systems are safe, compliant, and auditable." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!--====== Favicon Icon ======-->
@@ -120,14 +120,14 @@
                   data-wow-duration="1.3s"
                   data-wow-delay="0.2s"
                 >
-                Regulatory-Grade AI Evaluations for Banks
+                Regulatory-Grade AI Evaluations for Financial Services Companies
                 </h3>
                 <p
                   class="text wow fadeInUp"
                   data-wow-duration="1.3s"
                   data-wow-delay="0.8s"
                 >
-                 Enabling banks to prove—rather than assume—that their AI systems are safe, compliant, and auditable. Move beyond ad-hoc manual reviews to automated, defendable evidence.
+                 Enabling Financial Services Companies to prove—rather than assume—that their AI systems are safe, compliant, and auditable. Move beyond ad-hoc manual reviews to automated, defendable evidence.
                 </p>
                 
               </div>
@@ -296,7 +296,7 @@
                   We solve the problem of ad-hoc, manual evaluations that compliance teams cannot defend.
                   <br><br>
                   1. <strong>Select Eval Pack:</strong> Choose from Governance Core, AML, Chatbots, etc.<br>
-                  2. <strong>Bank's Own Cloud:</strong> Eval datasets and judge logic are uploaded to your environment.<br>
+                  2. <strong>Financial Services Companies Own Cloud:</strong> Eval datasets and judge logic are uploaded to your environment.<br>
                   3. <strong>Generate Reports:</strong> Regulator-aligned evidence reports are created automatically.<br>
                   <br>
                   <em>No SaaS lock-in. No data egress. No security review nightmare.</em>
