--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <div class="line m-auto"></div>
               <h3 class="title">
                 Our Solution 
-                <span> — Keeping AI prompt libraries efficient, safe, and unique.</span>
+                <span> — Turning AI governance, risk, and compliance into executable evaluations.</span>
               </h3>
             </div>
             <!-- section title -->
